Close KNOWN-ISSUES items 11 and 4: enum alignment pin and api/ declaration-site validation (#92)